--- a/Front-end/Eloquant-expressions.html
+++ b/Front-end/Eloquant-expressions.html
@@ -25,7 +25,7 @@
             <h2>Welcome to Eloquant Expressions</h2>
             <p>Inspiring moments, one quote at a time</p>
             <br>
-            <img src="Opening quote. webp.webp" class="center">
+            <img src="images/Opening quote. webp.webp" class="center">
         </div>
     </section>
 
@@ -39,9 +39,23 @@
     <section id="Categories">
         <div class="container">
             <h2>Quote Category</h2>
-            <ul></ul>
+            <ul>
+                <li>Change</li>
+                <li>Death</li>
+                <li>Education</li>
+                <li>Family</li>
+                <li>Famous</li>
+                <li>Forgiveness</li>
+                <li>Friendship</li>
+                <li>Happy</li>
+                <li>Health</li>
+                <li>Hope</li>
+                <li>Inspirational</li>
+                <li>Love</li>
+                <li>Random</li>
+            </ul>            
         </div>
-    </section>
+    </section>    
 
     <section id="Favourites">
         <div class="container">
