Adding code to the front-end html files

--- a/Front-end/html/Quote-of-the-day.html
+++ b/Front-end/html/Quote-of-the-day.html
@@ -8,29 +8,11 @@
     <body>
         <div class="quote-box">
             <h2>Quote of the day</h2>
-            <blockquote id="quote-text">Loading...</blockquote>
-            <span id="quote-author">Loading...</span>
+            <blockquote>Loading...</blockquote>
+	    <span> Loading...</span>
             <div>
                 <button onclick="fetchQuote()">New quote</button>
-                <button>Tweet</button>
             </div>
         </div>
-
-        <script>
-            async function fetchQuote() {
-                const response = await fetch('/quote');
-                const data = await response.json();
-                if (data.error) {
-                    document.getElementById('quote-text').textContent = 'Error fetching quote';
-                    document.getElementById('quote-author').textContent = '';
-                } else {
-                    document.getElementById('quote-text').textContent = data[0].quote;
-                    document.getElementById('quote-author').textContent = data[0].author;
-                }
-            }
-
-            // Fetch a quote when the page loads
-            window.onload = fetchQuote;
-        </script>
     </body>
 </html>
