--- a/Front-end/html/Eloquant-expressions.html
+++ b/Front-end/html/Eloquant-expressions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <title>Quoteopia</title>
-    <link rel="stylesheet" href="Eloquant-expressions.css">
+    <link rel="stylesheet" href="/Front-end/CSS/Eloquant-expressions.css">
 </head>
 <body>
     </style>
@@ -25,14 +25,14 @@
             <h2>Welcome to Eloquant Expressions</h2>
             <p>Inspiring moments, one quote at a time</p>
             <br>
-            <img src="images/Opening quote. webp.webp" class="center">
+            <img src="/Front-end/images/Opening quote. webp.webp" class="center">
         </div>
     </section>
 
     <section id="quoteoftheday">
         <div class="container">
             <h2>Quote of the day</h2>
-            <a href="Quote-of-the-day.html">Daily Quotes</a>
+            <a href="/Front-end/images/Second quote.jpg">Daily Quotes</a>
         </div>
     </section>
 
