--- a/Front-end/html/happiness.html
+++ b/Front-end/html/happiness.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Happiness</title>
-        <link rel="stylesheet" href="quote-daily.css">
+        <link rel="stylesheet" href="/Front-end/CSS/happiness.css">
     </head>
     <body>
         <div class="quote-box">
