--- a/Front-end/html/health.html
+++ b/Front-end/html/health.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Health</title>
-        <link rel="stylesheet" href="quote-daily.css">
+        <link rel="stylesheet" href="/Front-end/CSS/health.css">
     </head>
     <body>
         <div class="quote-box">
