--- a/Front-end/hope/hope.html
+++ b/Front-end/hope/hope.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hope</title>
-        <link rel="stylesheet" href="/Front-end/CSS/hope.css";>
+        <link rel="stylesheet" href="hope.css";>
     </head>
     <body>
         <div class="quote-box">
