--- a/Front-end/landing-page/Eloquent-expressions.html
+++ b/Front-end/landing-page/Eloquent-expressions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <title>Quoteopia</title>
-    <link rel="stylesheet" href="/Front-end/CSS/Eloquant-expressions.css">
+    <link rel="stylesheet" href="Eloquent-expressions.css">
 </head>
 <body>
     </style>
@@ -32,7 +32,7 @@
     <section id="quoteoftheday">
         <div class="container">
             <h2>Quote of the day</h2>
-            <a href="/Front-end/images/Second quote.jpg">Daily Quotes</a>
+            <a href="/Front-end/daily-quote/Quote-of-the-day.html"></a>Daily Quotes</a>
         </div>
     </section>
 
