--- a/Front-end/change/change.html
+++ b/Front-end/change/change.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Change</title>
-        <link rel="stylesheet" href="/Front-end/CSS/change.css">
+        <link rel="stylesheet" href="change.css">
     </head>
     <body>
         <div class="quote-box">
