--- a/Front-end/family/family.html
+++ b/Front-end/family/family.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Family</title>
-        <link rel="stylesheet" href="/Front-end/CSS/family.css">
+        <link rel="stylesheet" href="family.css">
     </head>
     <body>
         <div class="quote-box">
