--- a/Front-end/love/love.html
+++ b/Front-end/love/love.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Love</title>
-        <link rel="stylesheet" href="/Front-end/CSS/love.css">
+        <link rel="stylesheet" href="love.css">
     </head>
     <body>
         <div class="quote-box">
