Adding the background to love

--- a/Front-end/landing-page/Eloquent-expressions.html
+++ b/Front-end/landing-page/Eloquent-expressions.html
@@ -9,7 +9,7 @@
 <body>
     </style>
     <header>
-        <h1>Eloquant Expressions</h1>
+        <h1>Eloquent Expressions</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
