Fixing landing page

--- a/Front-end/landing-page/Eloquent-expressions.html
+++ b/Front-end/landing-page/Eloquent-expressions.html
@@ -25,7 +25,7 @@
             <h2>Welcome to Eloquant Expressions</h2>
             <p>Inspiring moments, one quote at a time</p>
             <br>
-            <img src="/Front-end/images/Opening quote. webp.webp" class="center">
+            <img src="Opening quote. webp.webp" class="center">
         </div>
     </section>
 
