Adding links to landing page

--- a/Front-end/famous/famous.html
+++ b/Front-end/famous/famous.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Family</title>
+        <title>Famous</title>
         <link rel="stylesheet" href="famous.css">
     </head>
     <body>
         <div class="quote-box">
-            <h2>Quotes about Family</h2>
+            <h2>Famous Quotes</h2>
             <blockquote>Loading...</blockquote>
             <span>Loading...</span>
             <div>
