--- a/Front-end/landing-page/Eloquent-expressions.html
+++ b/Front-end/landing-page/Eloquent-expressions.html
@@ -39,19 +39,19 @@
         <div class="container">
             <h2>Quote Category</h2>
             <ul>
-                <li>Change</li>
-                <li>Death</li>
-                <li>Education</li>
-                <li>Family</li>
-                <li>Famous</li>
-                <li>Forgiveness</li>
-                <li>Friendship</li>
-                <li>Happy</li>
-                <li>Health</li>
-                <li>Hope</li>
-                <li>Inspirational</li>
-                <li>Love</li>
-                <li>Random</li>
+                <a href="/Front-end/change/change.html">Quotes about change</a>
+                <a href="/Front-end/death/death.html">Quotes about Death</a>
+                <a href="/Front-end/education/education.html">Quotes about Education</a>
+                <a href="/Front-end/family/family.html">Quotes about Family</a>
+                <a href="/Front-end/famous/famous.html">Quotes From Famous People</a>
+                <a href="/Front-end/forgiveness/forgiveness.html">Quotes about forgiveness</a>
+                <a href="/Front-end/friendship/friendship.html">Quotes about Friendship</a> 
+                <a href="/Front-end/happiness/happiness.html">Quotes about happiness</a>
+                <a href="/Front-end/health/health.html">Quotes about Health</a>
+                <a href="/Front-end/hope/hope.html">Quotes about Hope</a>
+                <a href="/Front-end/inspiration/inspiration.html">Quotes to Inspire</a>
+                <a href="/Front-end/love/love.html">Quotes about Love</a>
+                <a href="/Front-end/success/success.html">Quotes about Success</a>
             </ul>            
         </div>
 
