Fixing the layout

--- a/Front-end/landing-page/Eloquent-expressions.html
+++ b/Front-end/landing-page/Eloquent-expressions.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="Eloquent-expressions.css">
 </head>
 <body>
-    </style>
     <header>
         <h1>Eloquent Expressions</h1>
         <nav>
@@ -31,29 +30,30 @@
     <section id="quoteoftheday">
         <div class="container">
             <h2>Quote of the day</h2>
-            <a href="/Front-end/daily-quote/Quote-of-the-day.html"></a>Daily Quotes</a>
+            <a href="/Front-end/daily-quote/Quote-of-the-day.html">Daily Quotes</a>
         </div>
     </section>
 
     <section id="Categories">
         <div class="container">
             <h2>Quote Category</h2>
-            <ul>
-                <a href="/Front-end/change/change.html">Quotes about change</a>
-                <a href="/Front-end/death/death.html">Quotes about Death</a>
-                <a href="/Front-end/education/education.html">Quotes about Education</a>
-                <a href="/Front-end/family/family.html">Quotes about Family</a>
-                <a href="/Front-end/famous/famous.html">Quotes From Famous People</a>
-                <a href="/Front-end/forgiveness/forgiveness.html">Quotes about forgiveness</a>
-                <a href="/Front-end/friendship/friendship.html">Quotes about Friendship</a> 
-                <a href="/Front-end/happiness/happiness.html">Quotes about happiness</a>
-                <a href="/Front-end/health/health.html">Quotes about Health</a>
-                <a href="/Front-end/hope/hope.html">Quotes about Hope</a>
-                <a href="/Front-end/inspiration/inspiration.html">Quotes to Inspire</a>
-                <a href="/Front-end/love/love.html">Quotes about Love</a>
-                <a href="/Front-end/success/success.html">Quotes about Success</a>
+            <ul class="category-list">
+                <li><a href="/Front-end/change/change.html">Quotes about change</a></li>
+                <li><a href="/Front-end/death/death.html">Quotes about Death</a></li>
+                <li><a href="/Front-end/education/education.html">Quotes about Education</a></li>
+                <li><a href="/Front-end/family/family.html">Quotes about Family</a></li>
+                <li><a href="/Front-end/famous/famous.html">Quotes From Famous People</a></li>
+                <li><a href="/Front-end/forgiveness/forgiveness.html">Quotes about forgiveness</a></li>
+                <li><a href="/Front-end/friendship/friendship.html">Quotes about Friendship</a></li>
+                <li><a href="/Front-end/happiness/happiness.html">Quotes about happiness</a></li>
+                <li><a href="/Front-end/health/health.html">Quotes about Health</a></li>
+                <li><a href="/Front-end/hope/hope.html">Quotes about Hope</a></li>
+                <li><a href="/Front-end/inspiration/inspiration.html">Quotes to Inspire</a></li>
+                <li><a href="/Front-end/love/love.html">Quotes about Love</a></li>
+                <li><a href="/Front-end/success/success.html">Quotes about Success</a></li>
             </ul>            
         </div>
+    </section>
 
     <footer>
         <p>&copy; Thank you for visiting the website. Have a great day!</p>
