--- a/Front-end/Eloquent-expressions.html
+++ b/Front-end/Eloquent-expressions.html
@@ -30,7 +30,7 @@
     <section id="quoteoftheday">
         <div class="container">
             <h2>Quote of the day</h2>
-            <a href="/Front-end/daily-quote/Quote-of-the-day.html">Daily Quotes</a>
+            <a href="quote-daily.css">Daily Quotes</a>
         </div>
     </section>
 
@@ -38,19 +38,19 @@
         <div class="container">
             <h2>Quote Category</h2>
             <ul class="category-list">
-                <li><a href="/Front-end/change/change.html">Quotes about change</a></li>
-                <li><a href="/Front-end/death/death.html">Quotes about Death</a></li>
-                <li><a href="/Front-end/education/education.html">Quotes about Education</a></li>
-                <li><a href="/Front-end/family/family.html">Quotes about Family</a></li>
-                <li><a href="/Front-end/famous/famous.html">Quotes From Famous People</a></li>
-                <li><a href="/Front-end/forgiveness/forgiveness.html">Quotes about forgiveness</a></li>
-                <li><a href="/Front-end/friendship/friendship.html">Quotes about Friendship</a></li>
-                <li><a href="/Front-end/happiness/happiness.html">Quotes about happiness</a></li>
-                <li><a href="/Front-end/health/health.html">Quotes about Health</a></li>
-                <li><a href="/Front-end/hope/hope.html">Quotes about Hope</a></li>
-                <li><a href="/Front-end/inspiration/inspiration.html">Quotes to Inspire</a></li>
-                <li><a href="/Front-end/love/love.html">Quotes about Love</a></li>
-                <li><a href="/Front-end/success/success.html">Quotes about Success</a></li>
+                <li><a href="change.html">Quotes about change</a></li>
+                <li><a href="death.html">Quotes about Death</a></li>
+                <li><a href="education.html">Quotes about Education</a></li>
+                <li><a href="family.html">Quotes about Family</a></li>
+                <li><a href="famous.html">Quotes From Famous People</a></li>
+                <li><a href="forgiveness.html">Quotes about forgiveness</a></li>
+                <li><a href="friendship.html">Quotes about Friendship</a></li>
+                <li><a href="happiness.html">Quotes about happiness</a></li>
+                <li><a href="health.html">Quotes about Health</a></li>
+                <li><a href="hope.html">Quotes about Hope</a></li>
+                <li><a href="inspiration.html">Quotes to Inspire</a></li>
+                <li><a href="love.html">Quotes about Love</a></li>
+                <li><a href="success.html">Quotes about Success</a></li>
             </ul>            
         </div>
     </section>
