Fixing the link

--- a/Front-end/Eloquent-expressions.html
+++ b/Front-end/Eloquent-expressions.html
@@ -30,7 +30,7 @@
     <section id="quoteoftheday">
         <div class="container">
             <h2>Quote of the day</h2>
-            <a href="quote-daily.css">Daily Quotes</a>
+            <a href="quote-daily.html">Daily Quotes</a>
         </div>
     </section>
 
