Adding the second image

--- a/Front-end/Eloquent-expressions.html
+++ b/Front-end/Eloquent-expressions.html
@@ -31,6 +31,7 @@
         <div class="container">
             <h2>Quote of the day</h2>
             <a href="quote-daily.html">Daily Quotes</a>
+            <img src="Second quote.jpg" class="center">
         </div>
     </section>
 
