--- a/Front-end/change.html
+++ b/Front-end/change.html
@@ -2,17 +2,42 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Change</title>
+        <title>Quotes about Change</title>
         <link rel="stylesheet" href="change.css">
     </head>
     <body>
         <div class="quote-box">
             <h2>Quotes about Change</h2>
-            <blockquote>Loading...</blockquote>
-            <span>Loading...</span>
+            <blockquote id="quote-text"></blockquote>
+            <span id="quote-author"></span>
             <div>
                 <button onclick="fetchQuote()">New quote</button>
             </div>
         </div>
+
+        <script>
+            async function fetchQuote() {
+                try {
+                    const response = await fetch('/api/quote');
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    const data = await response.json();
+                    if (data.error) {
+                        throw new Error(data.error);
+                    }
+                    const quote = data[0];
+                    document.getElementById('quote-text').textContent = quote.quote;
+                    document.getElementById('quote-author').textContent = `— ${quote.author}`;
+                } catch (error) {
+                    console.error('Error fetching quote:', error);
+                    document.getElementById('quote-text').textContent = 'Error fetching quote';
+                    document.getElementById('quote-author').textContent = '';
+                }
+            }
+
+            // Fetch initial quote on page load
+            fetchQuote();
+        </script>
     </body>
 </html>
