--- a/Front-end/change.html
+++ b/Front-end/change.html
@@ -8,8 +8,8 @@
     <body>
         <div class="quote-box">
             <h2>Quotes about Change</h2>
-            <blockquote id="quote-text"></blockquote>
-            <span id="quote-author"></span>
+            <blockquote id="quote"></blockquote>
+            <span id="author"></span>
             <div>
                 <button onclick="fetchQuote()">New quote</button>
             </div>
@@ -27,16 +27,14 @@
                         throw new Error(data.error);
                     }
                     const quote = data[0];
-                    document.getElementById('quote-text').textContent = quote.quote;
-                    document.getElementById('quote-author').textContent = `— ${quote.author}`;
+                    document.getElementById('quote').textContent = quote.quote;
+                    document.getElementById('author').textContent = `— ${quote.author}`;
                 } catch (error) {
                     console.error('Error fetching quote:', error);
-                    document.getElementById('quote-text').textContent = 'Error fetching quote';
-                    document.getElementById('quote-author').textContent = '';
+                    document.getElementById('quote').textContent = 'Error fetching quote';
+                    document.getElementById('author').textContent = '';
                 }
             }
-
-            // Fetch initial quote on page load
             fetchQuote();
         </script>
     </body>
