--- a/change.html
+++ b/change.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>Quotes about Change</title>
-        <link rel="stylesheet" href="change.css">
+        <link rel="stylesheet" href="/change.css">
     </head>
     <body>
         <div class="quote-box">
             <h2>Quotes about Change</h2>
-            <blockquote id="quote"></blockquote>
-            <span id="author"></span>
+            <blockquote id="quote-text">Fetching quote...</blockquote>
+            <span id="quote-author"></span>
             <div>
                 <button onclick="fetchQuote()">New quote</button>
             </div>
         </div>
 
         <script>
+            const category = 'change';
+            const apiKey = 'sTOdbVWWBVVvB9AszF2KvA==53Lx5w7HZSpnPTY7';
+            const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
+
             async function fetchQuote() {
                 try {
-                    const response = await fetch('/Back-end/API/change-api.py');
+                    const response = await fetch(apiUrl, {
+                        headers: {
+                            'X-Api-Key': apiKey
+                        }
+                    });
                     if (!response.ok) {
                         throw new Error(`HTTP error! status: ${response.status}`);
                     }
                     const data = await response.json();
-                    if (data.error) {
-                        throw new Error(data.error);
-                    }
                     const quote = data[0];
-                    document.getElementById('quote').textContent = quote.quote;
-                    document.getElementById('author').textContent = `— ${quote.author}`;
+                    document.getElementById('quote-text').textContent = quote.quote;
+                    document.getElementById('quote-author').textContent = `— ${quote.author}`;
                 } catch (error) {
                     console.error('Error fetching quote:', error);
-                    document.getElementById('quote').textContent = 'Error fetching quote';
-                    document.getElementById('author').textContent = '';
+                    document.getElementById('quote-text').textContent = 'Error fetching quote';
+                    document.getElementById('quote-author').textContent = '';
                 }
             }
+
+            // Fetch initial quote on page load
             fetchQuote();
         </script>
     </body>
