Fixing .css file for change

--- a/change.html
+++ b/change.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Quotes about Change</title>
-        <link rel="stylesheet" href="/change.css">
+        <link rel="stylesheet" href="change.css">
     </head>
     <body>
         <div class="quote-box">
