Fixing from forward ticks to backticks

--- a/death.html
+++ b/death.html
@@ -18,7 +18,7 @@
         <script>
             const category = 'death';
             const apiKey = 'SQmx5Z961jvfFj5CFAT3Sg==0wOfzfyqn6cQYFuZ';
-            const apiUrl = 'https://api.api-ninjas.com/v1/quotes?category=${category}';
+            const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
 
             async function fetchQuote() {
                 try {
