--- a/hope.html
+++ b/hope.html
@@ -8,11 +8,40 @@
     <body>
         <div class="quote-box">
             <h2>Quotes about Hope</h2>
-            <blockquote>Loading...</blockquote>
-            <span>Loading...</span>
+            <blockquote id="quote-text"></blockquote>
+            <span id="quote-author"></span>
             <div>
                 <button onclick="fetchQuote()">New quote</button>
             </div>
         </div>
+    
+        <script>
+            const category = 'Hope';
+            const apiKey = 'ee2i+GBH+ll4NVAvjR79+A==YUuxVikUBL6EyKtn';
+            const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
+    
+            async function fetchQuote() {
+                try {
+                    const response = await fetch(apiUrl, {
+                        headers: {
+                            'X-Api-Key': apiKey
+                        }
+                    });
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    const data = await response.json();
+                    const quote = data[0];
+                    document.getElementById('quote-text').textContent = quote.quote;
+                    document.getElementById('quote-author').textContent = `— ${quote.author}`;
+                } catch (error) {
+                    console.error('Error fetching quote:', error);
+                    document.getElementById('quote-text').textContent = 'Error fetching quote';
+                    document.getElementById('quote-author').textContent = '';
+                }
+            }
+            fetchQuote();
+        </script>
     </body>
-</html>
+    </html>
+
