--- a/success.html
+++ b/success.html
@@ -8,11 +8,41 @@
     <body>
         <div class="quote-box">
             <h2>Quotes about Success</h2>
-            <blockquote>Loading...</blockquote>
-            <span>Loading...</span>
+            <blockquote id="quote-text"></blockquote>
+            <span id="quote-author"></span>
             <div>
                 <button onclick="fetchQuote()">New quote</button>
             </div>
         </div>
+    
+        <script>
+            const category = 'Sucess';
+            const apiKey = 'ipf6Izv5ye4EMjIEai8x5w==aDkza9dtDhfsu3cN';
+            const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
+    
+            async function fetchQuote() {
+                try {
+                    const response = await fetch(apiUrl, {
+                        headers: {
+                            'X-Api-Key': apiKey
+                        }
+                    });
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    const data = await response.json();
+                    const quote = data[0];
+                    document.getElementById('quote-text').textContent = quote.quote;
+                    document.getElementById('quote-author').textContent = `— ${quote.author}`;
+                } catch (error) {
+                    console.error('Error fetching quote:', error);
+                    document.getElementById('quote-text').textContent = 'Error fetching quote';
+                    document.getElementById('quote-author').textContent = '';
+                }
+            }
+            fetchQuote();
+        </script>
     </body>
-</html>
+    </html>
+
+
