Fixing some errors and spelling mistakes

--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="quote-box">
-            <h2>Quotes about Death</h2>
+            <h2>Quotes about Education</h2>
             <blockquote id="quote-text"></blockquote>
             <span id="quote-author"></span>
             <div>
@@ -44,4 +44,3 @@
         </script>
     </body>
 </html>
-
