--- a/inspiration.html
+++ b/inspiration.html
@@ -15,7 +15,7 @@
     </div>
 
     <script>
-        const category = 'Inspiration';
+        const category = 'inspirational';
         const apiKey = 'LWQzMWWMsnKaH6wqCe4ISQ==r25JemQVIE1PLkRK';
         const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
 
