--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
         </div>
     
         <script>
-            const category = 'Sucess';
+            const category = 'Success';
             const apiKey = 'ipf6Izv5ye4EMjIEai8x5w==aDkza9dtDhfsu3cN';
             const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
     
