--- a/family.html
+++ b/family.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="quote-box">
-            <h2>Quotes about Death</h2>
+            <h2>Quotes about Family</h2>
             <blockquote id="quote-text"></blockquote>
             <span id="quote-author"></span>
             <div>
