--- a/Eloquent-expressions.html
+++ b/Eloquent-expressions.html
@@ -30,7 +30,7 @@
     <section id="quoteoftheday">
         <div class="container">
             <h2>Quote of the day</h2>
-            <a href="quote-daily.html">Daily Quotes</a>
+            <a href="Quote-of-the-day.html">Daily Quotes</a>
             <img src="Second quote.jpg" class="center">
         </div>
     </section>
