Updating the files and creating the landing page

--- a/hope.html
+++ b/hope.html
@@ -5,7 +5,7 @@
         <title>Hope</title>
         <link rel="stylesheet" href="hope.css";>
     </head>
-    <body>
+    <body></body>
         <div class="quote-box">
             <h2>Quotes about Hope</h2>
             <blockquote id="quote-text"></blockquote>
