--- a/inspiration.html
+++ b/inspiration.html
@@ -5,7 +5,7 @@
         <title>Inspiration</title>
         <link rel="stylesheet" href="inspiration.css">
     </head>
-    <div class="quote-box">
+    <div class="quote-box"></div>
         <h2>Quotes to Inspire</h2>
         <blockquote id="quote-text"></blockquote>
         <span id="quote-author"></span>
