Last minutes changes

--- a/Eloquent-expressions.html
+++ b/Eloquent-expressions.html
@@ -57,7 +57,7 @@
     </section>
 
     <footer>
-        <p>&copy; Thank you for visiting the website. Have a great day!</p>
+        <p>&copy; 2024. Eloquent Expressions. All rights reserved. </p>
     </footer>
 </body>
 </html>
