Trying something with css

--- a/landing-page.html
+++ b/landing-page.html
@@ -6,7 +6,7 @@
     <title>Background Image Example</title>
     <style>
         body {
-            background-image: 'Landing-page.jpg';
+            background-image: url('Landing-page.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
