--- a/landing-page.html
+++ b/landing-page.html
@@ -11,6 +11,10 @@
             background-position: center;
             background-repeat: no-repeat;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
