--- a/landing-page.html
+++ b/landing-page.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-image: url('Landing-page.jpg');
-            background-size: cover;
+            background-size: fill;
             background-position: center;
             background-repeat: no-repeat;
         }
