--- a/landing-page.html
+++ b/landing-page.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-image: url('Background.png');
-            background-size: fill;
+            background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
         }
