--- a/landing-page.html
+++ b/landing-page.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-image: url('9604897.jpg');
-            background-size: auto;
+            background-size: auto 100%;
             background-position: center;
             background-repeat: no-repeat;
         }
