--- a/landing-page.html
+++ b/landing-page.html
@@ -6,14 +6,10 @@
     <title>Background Image Example</title>
     <style>
         body {
-            background-image: url('9604897.jpg');
-            background-size: auto 100%;
+            background-image: url('Landing-page.jpg');
+            background-size: auto;
             background-position: center;
             background-repeat: no-repeat;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
         }
     </style>
 </head>
