back to the original

--- a/landing-page.html
+++ b/landing-page.html
@@ -6,7 +6,7 @@
     <title>Background Image Example</title>
     <style>
         body {
-            background-image: url('Landing-page.jpg');
+            background-image: url('9604897.jpg');
             background-size: auto;
             background-position: center;
             background-repeat: no-repeat;
