--- a/landing-page.html
+++ b/landing-page.html
@@ -76,11 +76,13 @@
 </head>
 <body>
     <header>
+        <h1> Eloquent expressions</h1>
         <nav>
             <ul>
                 <li><a href="#intro">Intro</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#features">Features</a></li>
+                <p><a href="/Eloquent-expressions.html" target="_blank">Visit our main website</a></p>
             </ul>
         </nav>
     </header>
