Changing the image style

--- a/Eloquent-expressions.html
+++ b/Eloquent-expressions.html
@@ -6,6 +6,11 @@
     <title>Quoteopia</title>
     <link rel="stylesheet" href="Eloquent-expressions.css">
 </head>
+<style>
+    img {
+        border-radius: 50%;
+    }
+</style>
 <body>
     <header>
         <h1>Eloquent Expressions</h1>
