--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Eloquent Expressions - Discover inspiring quotes and find motivation in the words of others.">
     <title>Eloquent Expressions</title>
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS file -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,17 +74,24 @@
             width: 100%;
             box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
         }
+
+        @media (max-width: 600px) {
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1> Eloquent expressions</h1>
-        <nav>
+        <h1>Eloquent Expressions</h1>
+        <nav aria-label="Main Navigation">
             <ul>
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#features">Features</a></li>
-                <p><a href="/Eloquent-expressions.html" target="_blank">Visit our main website</a></p>
+                <li><a href="#intro" aria-label="Introduction">Intro</a></li>
+                <li><a href="#about" aria-label="About Us">About Us</a></li>
+                <li><a href="#features" aria-label="Features">Features</a></li>
+                <li><a href="/Eloquent-expressions.html" target="_blank" aria-label="Visit main website">Visit our main website</a></li>
             </ul>
         </nav>
     </header>
@@ -110,4 +119,5 @@
     </footer>
 </body>
 </html>
+
 
