Adding a seperate style sheet fro index

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li><a href="#intro" aria-label="Introduction">Intro</a></li>
                 <li><a href="#about" aria-label="About Us">About Us</a></li>
                 <li><a href="#features" aria-label="Features">Features</a></li>
-                <li><a href="/Eloquent-expressions.html" target="_blank" aria-label="Visit main website">Visit our main website</a></li>
+                <li><a href="Eloquent-expressions.html" target="_blank" aria-label="Visit main website">Visit our main website</a></li>
             </ul>
         </nav>
     </header>
