--- a/Html/education.html
+++ b/Html/education.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Education</title>
-        <link rel="stylesheet" href="education.css">
+        <link rel="stylesheet" href="CSS/education.css">
     </head>
     <body>
         <div class="quote-box">
