Adding the CSS pages to the files

--- a/Html/death.html
+++ b/Html/death.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Death</title>
-        <link rel="stylesheet" href="death.css">
+        <link rel="stylesheet" href="/Html/death.html">
     </head>
     <body>
         <div class="quote-box">
