--- a/Html/Quote-of-the-day.html
+++ b/Html/Quote-of-the-day.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quote of the day</title>
-        <link rel="stylesheet" href="quote-daily.css">
+        <link rel="stylesheet" href="/CSS/quote-daily.css">
     </head>
     <body>
         <div class="quote-box">
