--- a/Html/forgiveness.html
+++ b/Html/forgiveness.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Forgiveness</title>
-        <link rel="stylesheet" href="forgiveness.css">
+        <link rel="stylesheet" href="/CSS/forgiveness.css">
     </head>
     <body>
         <div class="quote-box">
