Fixing the links the the css files

--- a/death.html
+++ b/death.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quotes about Death</title>
-    <link rel="stylesheet" href="/CSS/change.css">
+    <link rel="stylesheet" href="death.css">
 </head>
 <body>
     <div class="quote-box">
