--- a/inspiration.html
+++ b/inspiration.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Inspiration</title>
-        <link rel="stylesheet" href="/CSS/inspiration.css">
+        <link rel="stylesheet" href="inspiration.css">
     </head>
     <div class="quote-box"></div>
         <h2>Quotes to Inspire</h2>
