--- a/famous.html
+++ b/famous.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Famous</title>
-        <link rel="stylesheet" href="/CSS/famous.css">
+        <link rel="stylesheet" href="famous.css">
     </head>
     <div class="quote-box">
         <h2>Famous Quotes</h2>
