--- a/friendship.html
+++ b/friendship.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Friendship</title>
-        <link rel="stylesheet" href="/CSS/friendship.css">
+        <link rel="stylesheet" href="friendship.css">
     </head>
     <body>
         <div class="quote-box">
