--- a/health.html
+++ b/health.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Health</title>
-        <link rel="stylesheet" href="/CSS/health.css">
+        <link rel="stylesheet" href="health.css">
     </head>
     <div class="quote-box">
         <h2>Quotes about Health</h2>
