--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Success</title>
-        <link rel="stylesheet" href="/CSS/success.css">
+        <link rel="stylesheet" href="success.css">
     </head>
     <body>
         <div class="quote-box">
