--- a/Front-end/Html/health.html
+++ b/Front-end/Html/health.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--Meta charset declaration for proper charcter encoding-->
+        <meta charset="UTF-8">
+        <!--Sets the viewport to make the website responsive on different devices-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Title of the webpage displayed in the browser tab-->
         <title>Health</title>
+        <!--Link to the external CSS Stylesheets for styling the page-->
         <link rel="stylesheet" href="health.css">
     </head>
+    <body>
+        <!--Container for displaying the quote-->
     <div class="quote-box">
+        <!--Header for the section-->
         <h2>Quotes about Health</h2>
+        <!--Span element to show the quote text-->
         <blockquote id="quote-text"></blockquote>
+        <!--Container for the button to fetch a new quote-->
         <span id="quote-author"></span>
         <div>
+            <!--Button that triggers fetching a new qote when clicked-->
             <button onclick="fetchQuote()">New quote</button>
         </div>
     </div>
 
-    <script>
-        const category = 'Health';
-        const apiKey = 'Jnfv5j/HghjhDtRkbTzY3A==hGVTan9WvBtclTMQ';
-        const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
-
-        async function fetchQuote() {
-            try {
-                const response = await fetch(apiUrl, {
-                    headers: {
-                        'X-Api-Key': apiKey
-                    }
-                });
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const data = await response.json();
-                const quote = data[0];
-                document.getElementById('quote-text').textContent = quote.quote;
-                document.getElementById('quote-author').textContent = `— ${quote.author}`;
-            } catch (error) {
-                console.error('Error fetching quote:', error);
-                document.getElementById('quote-text').textContent = 'Error fetching quote';
-                document.getElementById('quote-author').textContent = '';
-            }
-        }
-        fetchQuote();
-    </script>
+    <!--Link to the backedn api-->
+    <script src="/Back-end/health-api.js"></script>
 </body>
 </html>
