--- a/Front-end/Html/inspiration.html
+++ b/Front-end/Html/inspiration.html
@@ -1,45 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--Meta charset declaration for proper character encoding-->
+        <meta charset="UTF-8">
+        <!--Sets the viewport to make the website responsive on different devices-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Title of the webpage displayed in the browser tab-->
         <title>Inspiration</title>
+        <!--Link to external CSS stylesheets for styling the page-->
         <link rel="stylesheet" href="inspiration.css">
     </head>
+    <!--Container for displaying the quote-->
     <div class="quote-box"></div>
+    <!--Header for the section-->
         <h2>Quotes to Inspire</h2>
+        <!--Span elements to show the quote text-->
         <blockquote id="quote-text"></blockquote>
+        <!--Container for the button to fetch a new quote-->
         <span id="quote-author"></span>
         <div>
+            <!--Button that triggers fetching a new quote when clicked-->
             <button onclick="fetchQuote()">New quote</button>
         </div>
     </div>
 
-    <script>
-        const category = 'inspirational';
-        const apiKey = 'LWQzMWWMsnKaH6wqCe4ISQ==r25JemQVIE1PLkRK';
-        const apiUrl = `https://api.api-ninjas.com/v1/quotes?category=${category}`;
-
-        async function fetchQuote() {
-            try {
-                const response = await fetch(apiUrl, {
-                    headers: {
-                        'X-Api-Key': apiKey
-                    }
-                });
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const data = await response.json();
-                const quote = data[0];
-                document.getElementById('quote-text').textContent = quote.quote;
-                document.getElementById('quote-author').textContent = `— ${quote.author}`;
-            } catch (error) {
-                console.error('Error fetching quote:', error);
-                document.getElementById('quote-text').textContent = 'Error fetching quote';
-                document.getElementById('quote-author').textContent = '';
-            }
-        }
-        fetchQuote();
-    </script>
+    <!--Link to the backend api-->
+    <script src="/Back-end/inspiration-api.js"></script>
 </body>
 </html>
