Trying to fix the references of the css and js

--- a/Html/change.html
+++ b/Html/change.html
@@ -8,7 +8,7 @@
     <!--Title of the webpage displayed in the broswer tab-->
     <title>Quotes about Change</title>
     <!--Link to external CSS stylesheets for styling the page-->
-    <link rel="stylesheet" href="/Front-end/CSS/change.css">
+    <link rel="stylesheet" href="change.css">
 </head>
 <body>
     <!-- Container for displaying the quote-->
@@ -26,6 +26,6 @@
     </div>
 
     <!--Link to the backend api-->
-    <script src="/Back-end/change-api.js " ></script>
+    <script src="change-api.js" ></script>
 </body>
 </html>
