--- a/education.html
+++ b/education.html
@@ -8,7 +8,7 @@
     <!--Title of webpage displaying -->
     <title>Quotes about Education</title>
     <!--Link to external CSS Stylesheets for styling the page -->
-    <link rel="stylesheet" href="/Front-end/CSS/education.css">
+    <link rel="stylesheet" href="education.css">
 </head>
 <body>
     <!--Container for displaying the quote-->
@@ -26,6 +26,6 @@
     </div>
 
     <!--Link to the backend api-->
-    <script src="/Back-end/education-api.js"></script>
+    <script src="education-api.js"></script>
 </body>
 </html>
