Fixing the references to the other files

--- a/death.html
+++ b/death.html
@@ -26,6 +26,6 @@
     </div>
 
     <!--Link to the back-end API-->
-    <script src="/Back-end/death-api.js"></script>
+    <script src="death-api.js"></script>
 </body>
 </html>
