--- a/famous.html
+++ b/famous.html
@@ -25,6 +25,6 @@
     </div>
 
     <!--Link to the back-end API-->
-    <script src="/Back-end/famous-api.js"></script>
+    <script src="famous-api.js"></script>
 </body>
 </html>
