--- a/forgiveness.html
+++ b/forgiveness.html
@@ -26,6 +26,6 @@
         </div>
     
         <!--Link to the backend api-->
-        <script src="/Back-end/forgiveness-api.js"></script>
+        <script src="forgiveness-api.js"></script>
     </body>
     </html>
