--- a/friendship.html
+++ b/friendship.html
@@ -26,6 +26,6 @@
         </div>
     
         <!--Link to the back-end api-->
-        <script src="/Back-end/friendship-api.js"></script>
+        <script src="friendship-api.js"></script>
     </body>
     </html>
