--- a/happiness.html
+++ b/happiness.html
@@ -26,6 +26,6 @@
         </div>
     
         <!--Link to the back-end API-->
-        <script src="/Back-end/hapiness-api.js"></script>
+        <script src="hapiness-api.js"></script>
     </body>
     </html>
