--- a/health.html
+++ b/health.html
@@ -26,6 +26,6 @@
     </div>
 
     <!--Link to the backedn api-->
-    <script src="/Back-end/health-api.js"></script>
+    <script src="health-api.js"></script>
 </body>
 </html>
