--- a/hope.html
+++ b/hope.html
@@ -26,7 +26,7 @@
         </div>
     
         <!--Link to the backend api-->
-        <script src="/Back-end/hope-api.js"></script>
+        <script src="hope-api.js"></script>
     </body>
     </html>
 
