--- a/inspiration.html
+++ b/inspiration.html
@@ -25,6 +25,6 @@
     </div>
 
     <!--Link to the backend api-->
-    <script src="/Back-end/inspiration-api.js"></script>
+    <script src="inspiration-api.js"></script>
 </body>
 </html>
