--- a/love.html
+++ b/love.html
@@ -26,6 +26,6 @@
         </div>
     
         <!--Link to the backend-->
-        <script src="/Back-end/love-api.js"></script>
+        <script src="love-api.js"></script>
     </body>
     </html>
