--- a/success.html
+++ b/success.html
@@ -27,6 +27,6 @@
         </div>
     
         <!--Link to the backend api-->
-        <script src="/Back-end/success-api.js"></script>
+        <script src="success-api.js"></script>
     </body>
     </html>
