--- a/Eloquent-expressions.html
+++ b/Eloquent-expressions.html
@@ -28,7 +28,7 @@
             <h2>Welcome to Eloquant Expressions</h2>
             <p>Inspiring moments, one quote at a time</p>
             <br>
-            <img src="/Images/Opening-quote.webp" class="center">
+            <img src="Opening-quote.webp" class="center">
         </div>
     </section>
 
@@ -36,7 +36,7 @@
         <div class="container">
             <h2>Quote of the day</h2>
             <a href="Quote-of-the-day.html">Daily Quotes</a>
-            <img src="/Images/Second quote.jpg" class="center">
+            <img src="Second quote.jpg" class="center">
         </div>
     </section>
 
