--- a/family.html
+++ b/family.html
@@ -26,7 +26,7 @@
         </div>
 
         <!--Link to the backend api-->
-        <script src="/Back-end/family-api.js">
+        <script src="family-api.js">
         </script>
     </body>
 </html>
